{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 57,
  "lineage": "d342f414-61ea-8e75-4b9e-29573ddd1f54",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-6871a115",
            "arn": "arn:aws:ec2:us-east-1:506056550276:instance/i-0c8e36a875eedadb0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8e36a875eedadb0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05bdd9d84aa319f90",
            "private_dns": "ip-10-0-101-118.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.118",
            "public_ip": "3.238.34.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0985f32c2efe61406",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed6719676e7683fd",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca611b0c63ca9b61"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0894927f1de279ab8",
            "domain": "vpc",
            "id": "eipalloc-0894927f1de279ab8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-6-145-115.compute-1.amazonaws.com",
            "public_ip": "52.6.145.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "learntf-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "learntf-vpc-us-east-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-083286489cd988373",
            "domain": "vpc",
            "id": "eipalloc-083286489cd988373",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-197-153-196.compute-1.amazonaws.com",
            "public_ip": "44.197.153.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "learntf-vpc-us-east-1b"
            },
            "tags_all": {
              "Name": "learntf-vpc-us-east-1b"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0384ed415ffddf36d",
            "domain": "vpc",
            "id": "eipalloc-0384ed415ffddf36d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-83-162-48.compute-1.amazonaws.com",
            "public_ip": "54.83.162.48",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "learntf-vpc-us-east-1c"
            },
            "tags_all": {
              "Name": "learntf-vpc-us-east-1c"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506056550276:internet-gateway/igw-084c3a77925478f7a",
            "id": "igw-084c3a77925478f7a",
            "owner_id": "506056550276",
            "tags": {
              "Name": "learntf-vpc"
            },
            "tags_all": {
              "Name": "learntf-vpc"
            },
            "vpc_id": "vpc-0c6795a4d45b96b22"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0894927f1de279ab8",
            "connectivity_type": "public",
            "id": "nat-0fd0632b8aa19c013",
            "network_interface_id": "eni-0c8ca5dd01d41d464",
            "private_ip": "10.0.101.98",
            "public_ip": "52.6.145.115",
            "subnet_id": "subnet-0ed6719676e7683fd",
            "tags": {
              "Name": "learntf-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "learntf-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-083286489cd988373",
            "connectivity_type": "public",
            "id": "nat-0256ada4217815fdc",
            "network_interface_id": "eni-080c51f6239cf2991",
            "private_ip": "10.0.102.241",
            "public_ip": "44.197.153.196",
            "subnet_id": "subnet-08de74abca7d73264",
            "tags": {
              "Name": "learntf-vpc-us-east-1b"
            },
            "tags_all": {
              "Name": "learntf-vpc-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0384ed415ffddf36d",
            "connectivity_type": "public",
            "id": "nat-0fe17e7d42b0eb402",
            "network_interface_id": "eni-0dbea21fe4ecf39c1",
            "private_ip": "10.0.103.186",
            "public_ip": "54.83.162.48",
            "subnet_id": "subnet-02e7d30c8efb9bb93",
            "tags": {
              "Name": "learntf-vpc-us-east-1c"
            },
            "tags_all": {
              "Name": "learntf-vpc-us-east-1c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04ddc33bc4c16ebc51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fd0632b8aa19c013",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04ddc33bc4c16ebc5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-018a7d7b2060792591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0256ada4217815fdc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-018a7d7b206079259",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05fcd10bffee028de1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fe17e7d42b0eb402",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05fcd10bffee028de",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-084c3a77925478f7a",
            "id": "r-rtb-0e87a097df509e5a31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e87a097df509e5a3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506056550276:route-table/rtb-04ddc33bc4c16ebc5",
            "id": "rtb-04ddc33bc4c16ebc5",
            "owner_id": "506056550276",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "learntf-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "learntf-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6795a4d45b96b22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506056550276:route-table/rtb-018a7d7b206079259",
            "id": "rtb-018a7d7b206079259",
            "owner_id": "506056550276",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "learntf-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "learntf-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6795a4d45b96b22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506056550276:route-table/rtb-05fcd10bffee028de",
            "id": "rtb-05fcd10bffee028de",
            "owner_id": "506056550276",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "learntf-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "learntf-vpc-private-us-east-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6795a4d45b96b22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506056550276:route-table/rtb-0e87a097df509e5a3",
            "id": "rtb-0e87a097df509e5a3",
            "owner_id": "506056550276",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-084c3a77925478f7a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "learntf-vpc-public"
            },
            "tags_all": {
              "Name": "learntf-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6795a4d45b96b22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04246bbf3244bc895",
            "route_table_id": "rtb-04ddc33bc4c16ebc5",
            "subnet_id": "subnet-059b96161f4c2d08b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aca0fcd3ef44d56d",
            "route_table_id": "rtb-018a7d7b206079259",
            "subnet_id": "subnet-0b53b4d68e2b84475"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b40b0ec9b06cf46",
            "route_table_id": "rtb-05fcd10bffee028de",
            "subnet_id": "subnet-0ccb30a5dc4783ad2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4a0507dadee6864",
            "route_table_id": "rtb-0e87a097df509e5a3",
            "subnet_id": "subnet-0ed6719676e7683fd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027933aee3f2979b7",
            "route_table_id": "rtb-0e87a097df509e5a3",
            "subnet_id": "subnet-08de74abca7d73264"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f118e57613c4e21e",
            "route_table_id": "rtb-0e87a097df509e5a3",
            "subnet_id": "subnet-02e7d30c8efb9bb93"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506056550276:subnet/subnet-059b96161f4c2d08b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059b96161f4c2d08b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506056550276",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "learntf-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "learntf-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0c6795a4d45b96b22"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506056550276:subnet/subnet-0b53b4d68e2b84475",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b53b4d68e2b84475",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506056550276",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "learntf-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "learntf-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-0c6795a4d45b96b22"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506056550276:subnet/subnet-0ccb30a5dc4783ad2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccb30a5dc4783ad2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506056550276",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "learntf-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "learntf-vpc-private-us-east-1c"
            },
            "vpc_id": "vpc-0c6795a4d45b96b22"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506056550276:subnet/subnet-0ed6719676e7683fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed6719676e7683fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "506056550276",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "learntf-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "learntf-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0c6795a4d45b96b22"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506056550276:subnet/subnet-08de74abca7d73264",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08de74abca7d73264",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "506056550276",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "learntf-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "learntf-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-0c6795a4d45b96b22"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506056550276:subnet/subnet-02e7d30c8efb9bb93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e7d30c8efb9bb93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "506056550276",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "learntf-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "learntf-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-0c6795a4d45b96b22"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506056550276:vpc/vpc-0c6795a4d45b96b22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c4948d0f62291500",
            "default_route_table_id": "rtb-0bf2f57c7abb636c0",
            "default_security_group_id": "sg-0ca611b0c63ca9b61",
            "dhcp_options_id": "dopt-0ba86e1130f644982",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c6795a4d45b96b22",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bf2f57c7abb636c0",
            "owner_id": "506056550276",
            "tags": {
              "Name": "learntf-vpc"
            },
            "tags_all": {
              "Name": "learntf-vpc"
            }
          }
        }
      ]
    }
  ]
}